increased font sizes to prevent zoom on mobile

--- a/client/src/components/ChatUserSearch/ChatUserSearch.css
+++ b/client/src/components/ChatUserSearch/ChatUserSearch.css
@@ -15,6 +15,7 @@
     border-bottom-left-radius: 8px;
     border-top-left-radius: 8px;
     padding-left: 8px;
+    font-size: 16px;
 }
 
 .chatMenuButton {
