--- a/client/src/components/UserSearch/UserSearch.css
+++ b/client/src/components/UserSearch/UserSearch.css
@@ -26,6 +26,7 @@
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     padding: 5px;
+    font-size: 16px;
 }
 
 .clearInputButton {
