--- a/client/src/pages/Messenger/Messenger.css
+++ b/client/src/pages/Messenger/Messenger.css
@@ -75,6 +75,7 @@
     bottom: 0;
     resize: none;
     outline: none;
+    font-size: 16px;
 }
 
 .chatSubmitButton {
